GLX invalid read/write on GLX contexts with tags
Running Xwayland in valgrind
shows invalid reads/writes relative to GLX contexts.
This is with !679 (merged)
Excerpt of valgrind logs
Syscall param writev(vector[...]) points to uninitialised byte(s)
at 0x51131BD: writev (in /usr/lib64/libc-2.33.so)
by 0x27AAAD: _XSERVTransSocketWritev (Xtranssock.c:2228)
by 0x26F631: UnknownInlinedFun (Xtrans.c:914)
by 0x26F631: FlushClient (io.c:887)
by 0x2A37B0: UnknownInlinedFun (vndcmds.c:110)
by 0x2A37B0: dispatch_GLXQueryVersion (vndcmds.c:101)
by 0x2A289F: GlxDispatchRequest (vndcmds.c:483)
by 0x1AD219: Dispatch (dispatch.c:497)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Address 0x1fff0000c1 is on thread 1's stack
in frame #3, created by dispatch_GLXQueryVersion (vndcmds.c:102)
Uninitialised value was created by a stack allocation
at 0x2A3740: dispatch_GLXQueryVersion (vndcmds.c:102)
Invalid read of size 4
at 0x28461E: xorgGlxMakeCurrent (glxcmds.c:599)
by 0x2A39FE: UnknownInlinedFun (vndcmds.c:161)
by 0x2A39FE: CommonMakeCurrent (vndcmds.c:255)
by 0x2A289F: GlxDispatchRequest (vndcmds.c:483)
by 0x1AD219: Dispatch (dispatch.c:497)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Address 0xb898854 is 100 bytes inside a block of size 200 free'd
at 0x48430E4: free (vg_replace_malloc.c:755)
by 0x27EDA7: UnknownInlinedFun (glxext.c:190)
by 0x27EDA7: ContextGone (glxext.c:82)
by 0x1CF7C1: doFreeResource.lto_priv.0 (resource.c:885)
by 0x283EF2: __glXDisp_DestroyContext (glxcmds.c:451)
by 0x2A1214: dispatch_DestroyContext (vnd_dispatch_stubs.c:82)
by 0x2A289F: GlxDispatchRequest (vndcmds.c:483)
by 0x1AD219: Dispatch (dispatch.c:497)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Block was alloc'd at
at 0x4845464: calloc (vg_replace_malloc.c:1117)
by 0x28767B: UnknownInlinedFun (glxcmds.c:222)
by 0x28767B: __glXDisp_CreateContextAttribsARB (createcontext.c:321)
by 0x2A3343: dispatch_CreateContextAttribsARB (vnd_dispatch_stubs.c:386)
by 0x2A289F: GlxDispatchRequest (vndcmds.c:483)
by 0x1AD219: Dispatch (dispatch.c:497)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Invalid read of size 4
at 0x28463A: xorgGlxMakeCurrent (glxcmds.c:636)
by 0x2A39FE: UnknownInlinedFun (vndcmds.c:161)
by 0x2A39FE: CommonMakeCurrent (vndcmds.c:255)
by 0x2A289F: GlxDispatchRequest (vndcmds.c:483)
by 0x1AD219: Dispatch (dispatch.c:497)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Address 0xb89885c is 108 bytes inside a block of size 200 free'd
at 0x48430E4: free (vg_replace_malloc.c:755)
by 0x27EDA7: UnknownInlinedFun (glxext.c:190)
by 0x27EDA7: ContextGone (glxext.c:82)
by 0x1CF7C1: doFreeResource.lto_priv.0 (resource.c:885)
by 0x283EF2: __glXDisp_DestroyContext (glxcmds.c:451)
by 0x2A1214: dispatch_DestroyContext (vnd_dispatch_stubs.c:82)
by 0x2A289F: GlxDispatchRequest (vndcmds.c:483)
by 0x1AD219: Dispatch (dispatch.c:497)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Block was alloc'd at
at 0x4845464: calloc (vg_replace_malloc.c:1117)
by 0x28767B: UnknownInlinedFun (glxcmds.c:222)
by 0x28767B: __glXDisp_CreateContextAttribsARB (createcontext.c:321)
by 0x2A3343: dispatch_CreateContextAttribsARB (vnd_dispatch_stubs.c:386)
by 0x2A289F: GlxDispatchRequest (vndcmds.c:483)
by 0x1AD219: Dispatch (dispatch.c:497)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Invalid read of size 1
at 0x284641: xorgGlxMakeCurrent (glxcmds.c:636)
by 0x2A39FE: UnknownInlinedFun (vndcmds.c:161)
by 0x2A39FE: CommonMakeCurrent (vndcmds.c:255)
by 0x2A289F: GlxDispatchRequest (vndcmds.c:483)
by 0x1AD219: Dispatch (dispatch.c:497)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Address 0xb898851 is 97 bytes inside a block of size 200 free'd
at 0x48430E4: free (vg_replace_malloc.c:755)
by 0x27EDA7: UnknownInlinedFun (glxext.c:190)
by 0x27EDA7: ContextGone (glxext.c:82)
by 0x1CF7C1: doFreeResource.lto_priv.0 (resource.c:885)
by 0x283EF2: __glXDisp_DestroyContext (glxcmds.c:451)
by 0x2A1214: dispatch_DestroyContext (vnd_dispatch_stubs.c:82)
by 0x2A289F: GlxDispatchRequest (vndcmds.c:483)
by 0x1AD219: Dispatch (dispatch.c:497)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Block was alloc'd at
at 0x4845464: calloc (vg_replace_malloc.c:1117)
by 0x28767B: UnknownInlinedFun (glxcmds.c:222)
by 0x28767B: __glXDisp_CreateContextAttribsARB (createcontext.c:321)
by 0x2A3343: dispatch_CreateContextAttribsARB (vnd_dispatch_stubs.c:386)
by 0x2A289F: GlxDispatchRequest (vndcmds.c:483)
by 0x1AD219: Dispatch (dispatch.c:497)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Invalid read of size 8
at 0x28464E: xorgGlxMakeCurrent (glxcmds.c:643)
by 0x2A39FE: UnknownInlinedFun (vndcmds.c:161)
by 0x2A39FE: CommonMakeCurrent (vndcmds.c:255)
by 0x2A289F: GlxDispatchRequest (vndcmds.c:483)
by 0x1AD219: Dispatch (dispatch.c:497)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Address 0xb898800 is 16 bytes inside a block of size 200 free'd
at 0x48430E4: free (vg_replace_malloc.c:755)
by 0x27EDA7: UnknownInlinedFun (glxext.c:190)
by 0x27EDA7: ContextGone (glxext.c:82)
by 0x1CF7C1: doFreeResource.lto_priv.0 (resource.c:885)
by 0x283EF2: __glXDisp_DestroyContext (glxcmds.c:451)
by 0x2A1214: dispatch_DestroyContext (vnd_dispatch_stubs.c:82)
by 0x2A289F: GlxDispatchRequest (vndcmds.c:483)
by 0x1AD219: Dispatch (dispatch.c:497)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Block was alloc'd at
at 0x4845464: calloc (vg_replace_malloc.c:1117)
by 0x28767B: UnknownInlinedFun (glxcmds.c:222)
by 0x28767B: __glXDisp_CreateContextAttribsARB (createcontext.c:321)
by 0x2A3343: dispatch_CreateContextAttribsARB (vnd_dispatch_stubs.c:386)
by 0x2A289F: GlxDispatchRequest (vndcmds.c:483)
by 0x1AD219: Dispatch (dispatch.c:497)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Invalid read of size 1
at 0x284664: xorgGlxMakeCurrent (glxcmds.c:647)
by 0x2A39FE: UnknownInlinedFun (vndcmds.c:161)
by 0x2A39FE: CommonMakeCurrent (vndcmds.c:255)
by 0x2A289F: GlxDispatchRequest (vndcmds.c:483)
by 0x1AD219: Dispatch (dispatch.c:497)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Address 0xb898851 is 97 bytes inside a block of size 200 free'd
at 0x48430E4: free (vg_replace_malloc.c:755)
by 0x27EDA7: UnknownInlinedFun (glxext.c:190)
by 0x27EDA7: ContextGone (glxext.c:82)
by 0x1CF7C1: doFreeResource.lto_priv.0 (resource.c:885)
by 0x283EF2: __glXDisp_DestroyContext (glxcmds.c:451)
by 0x2A1214: dispatch_DestroyContext (vnd_dispatch_stubs.c:82)
by 0x2A289F: GlxDispatchRequest (vndcmds.c:483)
by 0x1AD219: Dispatch (dispatch.c:497)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Block was alloc'd at
at 0x4845464: calloc (vg_replace_malloc.c:1117)
by 0x28767B: UnknownInlinedFun (glxcmds.c:222)
by 0x28767B: __glXDisp_CreateContextAttribsARB (createcontext.c:321)
by 0x2A3343: dispatch_CreateContextAttribsARB (vnd_dispatch_stubs.c:386)
by 0x2A289F: GlxDispatchRequest (vndcmds.c:483)
by 0x1AD219: Dispatch (dispatch.c:497)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Invalid read of size 1
at 0x28487D: xorgGlxMakeCurrent (glxcmds.c:671)
by 0x2A39FE: UnknownInlinedFun (vndcmds.c:161)
by 0x2A39FE: CommonMakeCurrent (vndcmds.c:255)
by 0x2A289F: GlxDispatchRequest (vndcmds.c:483)
by 0x1AD219: Dispatch (dispatch.c:497)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Address 0xb898850 is 96 bytes inside a block of size 200 free'd
at 0x48430E4: free (vg_replace_malloc.c:755)
by 0x27EDA7: UnknownInlinedFun (glxext.c:190)
by 0x27EDA7: ContextGone (glxext.c:82)
by 0x1CF7C1: doFreeResource.lto_priv.0 (resource.c:885)
by 0x283EF2: __glXDisp_DestroyContext (glxcmds.c:451)
by 0x2A1214: dispatch_DestroyContext (vnd_dispatch_stubs.c:82)
by 0x2A289F: GlxDispatchRequest (vndcmds.c:483)
by 0x1AD219: Dispatch (dispatch.c:497)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Block was alloc'd at
at 0x4845464: calloc (vg_replace_malloc.c:1117)
by 0x28767B: UnknownInlinedFun (glxcmds.c:222)
by 0x28767B: __glXDisp_CreateContextAttribsARB (createcontext.c:321)
by 0x2A3343: dispatch_CreateContextAttribsARB (vnd_dispatch_stubs.c:386)
by 0x2A289F: GlxDispatchRequest (vndcmds.c:483)
by 0x1AD219: Dispatch (dispatch.c:497)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Invalid write of size 8
at 0x2846A7: xorgGlxMakeCurrent (glxcmds.c:672)
by 0x2A39FE: UnknownInlinedFun (vndcmds.c:161)
by 0x2A39FE: CommonMakeCurrent (vndcmds.c:255)
by 0x2A289F: GlxDispatchRequest (vndcmds.c:483)
by 0x1AD219: Dispatch (dispatch.c:497)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Address 0xb898840 is 80 bytes inside a block of size 200 free'd
at 0x48430E4: free (vg_replace_malloc.c:755)
by 0x27EDA7: UnknownInlinedFun (glxext.c:190)
by 0x27EDA7: ContextGone (glxext.c:82)
by 0x1CF7C1: doFreeResource.lto_priv.0 (resource.c:885)
by 0x283EF2: __glXDisp_DestroyContext (glxcmds.c:451)
by 0x2A1214: dispatch_DestroyContext (vnd_dispatch_stubs.c:82)
by 0x2A289F: GlxDispatchRequest (vndcmds.c:483)
by 0x1AD219: Dispatch (dispatch.c:497)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Block was alloc'd at
at 0x4845464: calloc (vg_replace_malloc.c:1117)
by 0x28767B: UnknownInlinedFun (glxcmds.c:222)
by 0x28767B: __glXDisp_CreateContextAttribsARB (createcontext.c:321)
by 0x2A3343: dispatch_CreateContextAttribsARB (vnd_dispatch_stubs.c:386)
by 0x2A289F: GlxDispatchRequest (vndcmds.c:483)
by 0x1AD219: Dispatch (dispatch.c:497)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Invalid read of size 4
at 0x284710: xorgGlxMakeCurrent (glxcmds.c:674)
by 0x2A39FE: UnknownInlinedFun (vndcmds.c:161)
by 0x2A39FE: CommonMakeCurrent (vndcmds.c:255)
by 0x2A289F: GlxDispatchRequest (vndcmds.c:483)
by 0x1AD219: Dispatch (dispatch.c:497)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Address 0xb898848 is 88 bytes inside a block of size 200 free'd
at 0x48430E4: free (vg_replace_malloc.c:755)
by 0x27EDA7: UnknownInlinedFun (glxext.c:190)
by 0x27EDA7: ContextGone (glxext.c:82)
by 0x1CF7C1: doFreeResource.lto_priv.0 (resource.c:885)
by 0x283EF2: __glXDisp_DestroyContext (glxcmds.c:451)
by 0x2A1214: dispatch_DestroyContext (vnd_dispatch_stubs.c:82)
by 0x2A289F: GlxDispatchRequest (vndcmds.c:483)
by 0x1AD219: Dispatch (dispatch.c:497)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Block was alloc'd at
at 0x4845464: calloc (vg_replace_malloc.c:1117)
by 0x28767B: UnknownInlinedFun (glxcmds.c:222)
by 0x28767B: __glXDisp_CreateContextAttribsARB (createcontext.c:321)
by 0x2A3343: dispatch_CreateContextAttribsARB (vnd_dispatch_stubs.c:386)
by 0x2A289F: GlxDispatchRequest (vndcmds.c:483)
by 0x1AD219: Dispatch (dispatch.c:497)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Invalid read of size 4
at 0x28461E: xorgGlxMakeCurrent (glxcmds.c:599)
by 0x2A25A9: UnknownInlinedFun (vndext.c:168)
by 0x2A25A9: GLXClientCallback (vndext.c:188)
by 0x1B1F6B: _CallCallbacks (dixutils.c:743)
by 0x1ABF83: UnknownInlinedFun (callback.h:83)
by 0x1ABF83: CloseDownClient (dispatch.c:3487)
by 0x275D40: ospoll_wait (ospoll.c:657)
by 0x1ACE6F: UnknownInlinedFun (WaitFor.c:208)
by 0x1ACE6F: Dispatch (dispatch.c:438)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Address 0x5e63d64 is 100 bytes inside a block of size 200 free'd
at 0x48430E4: free (vg_replace_malloc.c:755)
by 0x27EDA7: UnknownInlinedFun (glxext.c:190)
by 0x27EDA7: ContextGone (glxext.c:82)
by 0x1CF7C1: doFreeResource.lto_priv.0 (resource.c:885)
by 0x283EF2: __glXDisp_DestroyContext (glxcmds.c:451)
by 0x2A1214: dispatch_DestroyContext (vnd_dispatch_stubs.c:82)
by 0x2A289F: GlxDispatchRequest (vndcmds.c:483)
by 0x1AD219: Dispatch (dispatch.c:497)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Block was alloc'd at
at 0x4845464: calloc (vg_replace_malloc.c:1117)
by 0x28767B: UnknownInlinedFun (glxcmds.c:222)
by 0x28767B: __glXDisp_CreateContextAttribsARB (createcontext.c:321)
by 0x2A3343: dispatch_CreateContextAttribsARB (vnd_dispatch_stubs.c:386)
by 0x2A289F: GlxDispatchRequest (vndcmds.c:483)
by 0x1AD219: Dispatch (dispatch.c:497)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Invalid read of size 4
at 0x28463A: xorgGlxMakeCurrent (glxcmds.c:636)
by 0x2A25A9: UnknownInlinedFun (vndext.c:168)
by 0x2A25A9: GLXClientCallback (vndext.c:188)
by 0x1B1F6B: _CallCallbacks (dixutils.c:743)
by 0x1ABF83: UnknownInlinedFun (callback.h:83)
by 0x1ABF83: CloseDownClient (dispatch.c:3487)
by 0x275D40: ospoll_wait (ospoll.c:657)
by 0x1ACE6F: UnknownInlinedFun (WaitFor.c:208)
by 0x1ACE6F: Dispatch (dispatch.c:438)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Address 0x5e63d6c is 108 bytes inside a block of size 200 free'd
at 0x48430E4: free (vg_replace_malloc.c:755)
by 0x27EDA7: UnknownInlinedFun (glxext.c:190)
by 0x27EDA7: ContextGone (glxext.c:82)
by 0x1CF7C1: doFreeResource.lto_priv.0 (resource.c:885)
by 0x283EF2: __glXDisp_DestroyContext (glxcmds.c:451)
by 0x2A1214: dispatch_DestroyContext (vnd_dispatch_stubs.c:82)
by 0x2A289F: GlxDispatchRequest (vndcmds.c:483)
by 0x1AD219: Dispatch (dispatch.c:497)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Block was alloc'd at
at 0x4845464: calloc (vg_replace_malloc.c:1117)
by 0x28767B: UnknownInlinedFun (glxcmds.c:222)
by 0x28767B: __glXDisp_CreateContextAttribsARB (createcontext.c:321)
by 0x2A3343: dispatch_CreateContextAttribsARB (vnd_dispatch_stubs.c:386)
by 0x2A289F: GlxDispatchRequest (vndcmds.c:483)
by 0x1AD219: Dispatch (dispatch.c:497)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Invalid read of size 1
at 0x284641: xorgGlxMakeCurrent (glxcmds.c:636)
by 0x2A25A9: UnknownInlinedFun (vndext.c:168)
by 0x2A25A9: GLXClientCallback (vndext.c:188)
by 0x1B1F6B: _CallCallbacks (dixutils.c:743)
by 0x1ABF83: UnknownInlinedFun (callback.h:83)
by 0x1ABF83: CloseDownClient (dispatch.c:3487)
by 0x275D40: ospoll_wait (ospoll.c:657)
by 0x1ACE6F: UnknownInlinedFun (WaitFor.c:208)
by 0x1ACE6F: Dispatch (dispatch.c:438)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Address 0x5e63d61 is 97 bytes inside a block of size 200 free'd
at 0x48430E4: free (vg_replace_malloc.c:755)
by 0x27EDA7: UnknownInlinedFun (glxext.c:190)
by 0x27EDA7: ContextGone (glxext.c:82)
by 0x1CF7C1: doFreeResource.lto_priv.0 (resource.c:885)
by 0x283EF2: __glXDisp_DestroyContext (glxcmds.c:451)
by 0x2A1214: dispatch_DestroyContext (vnd_dispatch_stubs.c:82)
by 0x2A289F: GlxDispatchRequest (vndcmds.c:483)
by 0x1AD219: Dispatch (dispatch.c:497)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Block was alloc'd at
at 0x4845464: calloc (vg_replace_malloc.c:1117)
by 0x28767B: UnknownInlinedFun (glxcmds.c:222)
by 0x28767B: __glXDisp_CreateContextAttribsARB (createcontext.c:321)
by 0x2A3343: dispatch_CreateContextAttribsARB (vnd_dispatch_stubs.c:386)
by 0x2A289F: GlxDispatchRequest (vndcmds.c:483)
by 0x1AD219: Dispatch (dispatch.c:497)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Invalid read of size 8
at 0x28464E: xorgGlxMakeCurrent (glxcmds.c:643)
by 0x2A25A9: UnknownInlinedFun (vndext.c:168)
by 0x2A25A9: GLXClientCallback (vndext.c:188)
by 0x1B1F6B: _CallCallbacks (dixutils.c:743)
by 0x1ABF83: UnknownInlinedFun (callback.h:83)
by 0x1ABF83: CloseDownClient (dispatch.c:3487)
by 0x275D40: ospoll_wait (ospoll.c:657)
by 0x1ACE6F: UnknownInlinedFun (WaitFor.c:208)
by 0x1ACE6F: Dispatch (dispatch.c:438)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Address 0x5e63d10 is 16 bytes inside a block of size 200 free'd
at 0x48430E4: free (vg_replace_malloc.c:755)
by 0x27EDA7: UnknownInlinedFun (glxext.c:190)
by 0x27EDA7: ContextGone (glxext.c:82)
by 0x1CF7C1: doFreeResource.lto_priv.0 (resource.c:885)
by 0x283EF2: __glXDisp_DestroyContext (glxcmds.c:451)
by 0x2A1214: dispatch_DestroyContext (vnd_dispatch_stubs.c:82)
by 0x2A289F: GlxDispatchRequest (vndcmds.c:483)
by 0x1AD219: Dispatch (dispatch.c:497)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Block was alloc'd at
at 0x4845464: calloc (vg_replace_malloc.c:1117)
by 0x28767B: UnknownInlinedFun (glxcmds.c:222)
by 0x28767B: __glXDisp_CreateContextAttribsARB (createcontext.c:321)
by 0x2A3343: dispatch_CreateContextAttribsARB (vnd_dispatch_stubs.c:386)
by 0x2A289F: GlxDispatchRequest (vndcmds.c:483)
by 0x1AD219: Dispatch (dispatch.c:497)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Invalid read of size 1
at 0x284664: xorgGlxMakeCurrent (glxcmds.c:647)
by 0x2A25A9: UnknownInlinedFun (vndext.c:168)
by 0x2A25A9: GLXClientCallback (vndext.c:188)
by 0x1B1F6B: _CallCallbacks (dixutils.c:743)
by 0x1ABF83: UnknownInlinedFun (callback.h:83)
by 0x1ABF83: CloseDownClient (dispatch.c:3487)
by 0x275D40: ospoll_wait (ospoll.c:657)
by 0x1ACE6F: UnknownInlinedFun (WaitFor.c:208)
by 0x1ACE6F: Dispatch (dispatch.c:438)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Address 0x5e63d61 is 97 bytes inside a block of size 200 free'd
at 0x48430E4: free (vg_replace_malloc.c:755)
by 0x27EDA7: UnknownInlinedFun (glxext.c:190)
by 0x27EDA7: ContextGone (glxext.c:82)
by 0x1CF7C1: doFreeResource.lto_priv.0 (resource.c:885)
by 0x283EF2: __glXDisp_DestroyContext (glxcmds.c:451)
by 0x2A1214: dispatch_DestroyContext (vnd_dispatch_stubs.c:82)
by 0x2A289F: GlxDispatchRequest (vndcmds.c:483)
by 0x1AD219: Dispatch (dispatch.c:497)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Block was alloc'd at
at 0x4845464: calloc (vg_replace_malloc.c:1117)
by 0x28767B: UnknownInlinedFun (glxcmds.c:222)
by 0x28767B: __glXDisp_CreateContextAttribsARB (createcontext.c:321)
by 0x2A3343: dispatch_CreateContextAttribsARB (vnd_dispatch_stubs.c:386)
by 0x2A289F: GlxDispatchRequest (vndcmds.c:483)
by 0x1AD219: Dispatch (dispatch.c:497)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Invalid read of size 1
at 0x28487D: xorgGlxMakeCurrent (glxcmds.c:671)
by 0x2A25A9: UnknownInlinedFun (vndext.c:168)
by 0x2A25A9: GLXClientCallback (vndext.c:188)
by 0x1B1F6B: _CallCallbacks (dixutils.c:743)
by 0x1ABF83: UnknownInlinedFun (callback.h:83)
by 0x1ABF83: CloseDownClient (dispatch.c:3487)
by 0x275D40: ospoll_wait (ospoll.c:657)
by 0x1ACE6F: UnknownInlinedFun (WaitFor.c:208)
by 0x1ACE6F: Dispatch (dispatch.c:438)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Address 0x5e63d60 is 96 bytes inside a block of size 200 free'd
at 0x48430E4: free (vg_replace_malloc.c:755)
by 0x27EDA7: UnknownInlinedFun (glxext.c:190)
by 0x27EDA7: ContextGone (glxext.c:82)
by 0x1CF7C1: doFreeResource.lto_priv.0 (resource.c:885)
by 0x283EF2: __glXDisp_DestroyContext (glxcmds.c:451)
by 0x2A1214: dispatch_DestroyContext (vnd_dispatch_stubs.c:82)
by 0x2A289F: GlxDispatchRequest (vndcmds.c:483)
by 0x1AD219: Dispatch (dispatch.c:497)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Block was alloc'd at
at 0x4845464: calloc (vg_replace_malloc.c:1117)
by 0x28767B: UnknownInlinedFun (glxcmds.c:222)
by 0x28767B: __glXDisp_CreateContextAttribsARB (createcontext.c:321)
by 0x2A3343: dispatch_CreateContextAttribsARB (vnd_dispatch_stubs.c:386)
by 0x2A289F: GlxDispatchRequest (vndcmds.c:483)
by 0x1AD219: Dispatch (dispatch.c:497)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Invalid write of size 8
at 0x2846A7: xorgGlxMakeCurrent (glxcmds.c:672)
by 0x2A25A9: UnknownInlinedFun (vndext.c:168)
by 0x2A25A9: GLXClientCallback (vndext.c:188)
by 0x1B1F6B: _CallCallbacks (dixutils.c:743)
by 0x1ABF83: UnknownInlinedFun (callback.h:83)
by 0x1ABF83: CloseDownClient (dispatch.c:3487)
by 0x275D40: ospoll_wait (ospoll.c:657)
by 0x1ACE6F: UnknownInlinedFun (WaitFor.c:208)
by 0x1ACE6F: Dispatch (dispatch.c:438)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Address 0x5e63d50 is 80 bytes inside a block of size 200 free'd
at 0x48430E4: free (vg_replace_malloc.c:755)
by 0x27EDA7: UnknownInlinedFun (glxext.c:190)
by 0x27EDA7: ContextGone (glxext.c:82)
by 0x1CF7C1: doFreeResource.lto_priv.0 (resource.c:885)
by 0x283EF2: __glXDisp_DestroyContext (glxcmds.c:451)
by 0x2A1214: dispatch_DestroyContext (vnd_dispatch_stubs.c:82)
by 0x2A289F: GlxDispatchRequest (vndcmds.c:483)
by 0x1AD219: Dispatch (dispatch.c:497)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Block was alloc'd at
at 0x4845464: calloc (vg_replace_malloc.c:1117)
by 0x28767B: UnknownInlinedFun (glxcmds.c:222)
by 0x28767B: __glXDisp_CreateContextAttribsARB (createcontext.c:321)
by 0x2A3343: dispatch_CreateContextAttribsARB (vnd_dispatch_stubs.c:386)
by 0x2A289F: GlxDispatchRequest (vndcmds.c:483)
by 0x1AD219: Dispatch (dispatch.c:497)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Invalid read of size 4
at 0x284710: xorgGlxMakeCurrent (glxcmds.c:674)
by 0x2A25A9: UnknownInlinedFun (vndext.c:168)
by 0x2A25A9: GLXClientCallback (vndext.c:188)
by 0x1B1F6B: _CallCallbacks (dixutils.c:743)
by 0x1ABF83: UnknownInlinedFun (callback.h:83)
by 0x1ABF83: CloseDownClient (dispatch.c:3487)
by 0x275D40: ospoll_wait (ospoll.c:657)
by 0x1ACE6F: UnknownInlinedFun (WaitFor.c:208)
by 0x1ACE6F: Dispatch (dispatch.c:438)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Address 0x5e63d58 is 88 bytes inside a block of size 200 free'd
at 0x48430E4: free (vg_replace_malloc.c:755)
by 0x27EDA7: UnknownInlinedFun (glxext.c:190)
by 0x27EDA7: ContextGone (glxext.c:82)
by 0x1CF7C1: doFreeResource.lto_priv.0 (resource.c:885)
by 0x283EF2: __glXDisp_DestroyContext (glxcmds.c:451)
by 0x2A1214: dispatch_DestroyContext (vnd_dispatch_stubs.c:82)
by 0x2A289F: GlxDispatchRequest (vndcmds.c:483)
by 0x1AD219: Dispatch (dispatch.c:497)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Block was alloc'd at
at 0x4845464: calloc (vg_replace_malloc.c:1117)
by 0x28767B: UnknownInlinedFun (glxcmds.c:222)
by 0x28767B: __glXDisp_CreateContextAttribsARB (createcontext.c:321)
by 0x2A3343: dispatch_CreateContextAttribsARB (vnd_dispatch_stubs.c:386)
by 0x2A289F: GlxDispatchRequest (vndcmds.c:483)
by 0x1AD219: Dispatch (dispatch.c:497)
by 0x13EE48: UnknownInlinedFun (main.c:271)
by 0x13EE48: main (stubmain.c:34)
Looks like we're accessing a context in glxMakeCurrent()
after it's been destroyed.
Based on the source lines reported above, the context is prevglxc
which is set to prevglxc = glxServer.getContextTagPrivate(client, tag);
So maybe there's more to it than !680 (merged)
CC: @ajax